# whisper-pytorch

./: .env  README.md  pyproject.toml  run_whisper.py
